src/libawn-extras/bindings/vala/awn-extras.vapi

/* awn-extras.vapi generated by vapigen, do not modify. */

[CCode (cprefix = "AwnExtras", lower_case_cprefix = "awn_extras_")]
namespace AwnExtras {
	[CCode (cprefix = "AWN_APPLET_LICENSE_", has_type_id = "0", cheader_filename = "libawn-extras/awn-extras.h")]
	public enum AwnAppletLicense {
		GPLV2,
		GPLV3,
		LGPLV2_1,
		LGPLV3
	}
	[CCode (cname = "awncolor_to_string", cheader_filename = "libawn-extras/awn-extras.h")]
	public static weak string awncolor_to_string (Awn.Color colour);
	[CCode (cname = "gdkcolor_to_awncolor", cheader_filename = "libawn-extras/awn-extras.h")]
	public static weak Awn.Color gdkcolor_to_awncolor (Gdk.Color gdk_colour);
	[CCode (cname = "gdkcolor_to_awncolor_with_alpha", cheader_filename = "libawn-extras/awn-extras.h")]
	public static weak Awn.Color gdkcolor_to_awncolor_with_alpha (Gdk.Color gdk_color, double alpha);
	[CCode (cname = "get_pixbuf_from_surface", cheader_filename = "libawn-extras/awn-extras.h")]
	public static weak Gdk.Pixbuf get_pixbuf_from_surface (Cairo.Surface surface);
	[CCode (cname = "notify_message", cheader_filename = "libawn-extras/awn-extras.h")]
	public static bool notify_message (string summary, string body, string icon_str, long timeout);
	[CCode (cname = "notify_message_async", cheader_filename = "libawn-extras/awn-extras.h")]
	public static void notify_message_async (string summary, string body, string icon_str, long timeout);
	[CCode (cname = "notify_message_extended", cheader_filename = "libawn-extras/awn-extras.h")]
	public static void notify_message_extended (string summary, string body, string icon_str, Notify.Urgency urgency, long timeout) throws GLib.Error;
	[CCode (cname = "share_config_bool", cheader_filename = "libawn-extras/awn-extras.h")]
	public static bool share_config_bool (string key);
	[CCode (cname = "shared_menuitem_about_applet", cheader_filename = "libawn-extras/awn-extras.h")]
	public static weak Gtk.Widget shared_menuitem_about_applet (string copyright, AwnExtras.AwnAppletLicense license, string program_name, string version, string comments, string website, string website_label, string icon_name, string translator_credits, string authors, string artists, string documenters);
	[CCode (cname = "shared_menuitem_about_applet_simple", cheader_filename = "libawn-extras/awn-extras.h")]
	public static weak Gtk.Widget shared_menuitem_about_applet_simple (string copyright, AwnExtras.AwnAppletLicense license, string program_name, string version);
	[CCode (cname = "shared_menuitem_create_applet_prefs", cheader_filename = "libawn-extras/awn-extras.h")]
	public static weak Gtk.Widget shared_menuitem_create_applet_prefs (string instance, string baseconf, string applet_name);
	[CCode (cname = "surface_2_pixbuf", cheader_filename = "libawn-extras/awn-extras.h")]
	public static weak Gdk.Pixbuf surface_2_pixbuf (Gdk.Pixbuf pixbuf, Cairo.Surface surface);
	[CCode (cname = "urldecode", cheader_filename = "libawn-extras/awn-extras.h")]
	public static weak string urldecode (string source, string dest);
	[CCode (cname = "urlencode", cheader_filename = "libawn-extras/awn-extras.h")]
	public static weak string urlencode (string source, string dest, uint max);
}
